--- a/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
+++ b/src/app/features/post-login/school-side/initiation-plan/initiation-plan-detail/initiation-plan-detail.component.html
@@ -126,7 +126,7 @@
     <span
       *ngIf="inputFileForm.get('documentName')?.dirty && inputFileForm.controls.documentName.errors?.['whitespace']"
       class="p-error"
-      >Vui lòng điền mã tài liệu</span
+      >Vui lòng điền tên tài liệu</span
     >
     <br />
     <label class="mb-1 mt-1" for="">Mã tài liệu</label>
@@ -260,7 +260,7 @@
         </div>
         <div class="plan-file-item-content">
           <div class="col-md-10 p-2">
-            <span class="font-weight-bold font-size-20">
+            <span class="font-weight-bold">
               {{ lastDocs.departmentDocument.documentName }}
             </span>
             <br />
@@ -355,6 +355,12 @@
       <!-- 7 đang chờ phê duyệt -->
       <ng-container *ngIf="schoolinitiationplan.status.statusId == 7">
         <div *ngIf="fileStatus" class="px-4 my-4">
+          <div class="d-flex justify-content-center align-items-center mb-2">
+            <span *ngIf="!checkCanEdit()" class="p-error"
+              ><span class="font-weight-bold">Thông báo: </span>Hết mẹ hạn
+              rồi</span
+            >
+          </div>
           <div class="plan-file-item d-flex">
             <div
               class="plan-file-item-img d-flex justify-content-center align-items-center"
@@ -372,6 +378,14 @@
                 <br />
                 <span class="font-weight-bold">Mã: </span
                 ><span>{{ lastDocs.schoolDocument.documentCode }}</span>
+                <br />
+                <span class="text-black-50">{{
+                  lastDocs.schoolDocument.sizeFormat
+                }}</span>
+                <br />
+                <span class="text-black-50">{{
+                  lastDocs.schoolDocument.uploadedDate | date : "dd/MM/yyyy"
+                }}</span>
               </div>
             </div>
             <div
@@ -387,9 +401,6 @@
             </div>
           </div>
           <div class="mt-2 btn-upload">
-            <div class="d-flex justify-content-center align-items-center">
-              <span *ngIf="!checkCanEdit()" class="p-error">Hết mẹ hạn rồi</span>
-            </div>
             <div class="d-flex justify-content-center align-items-center">
               <button
                 *ngIf="!iconStatus"
@@ -439,8 +450,32 @@
                 <br />
                 <span class="font-weight-bold">Mã: </span
                 ><span>{{ lastDocs.schoolDocument.documentCode }}</span>
+                <br />
+                <span class="text-black-50">{{
+                  lastDocs.schoolDocument.sizeFormat
+                }}</span>
+                <br />
+                <span class="text-black-50">{{
+                  lastDocs.schoolDocument.uploadedDate | date : "dd/MM/yyyy"
+                }}</span>
               </div>
             </div>
+          </div>
+          <div class="mt-5 d-flex justify-content-center align-items-center">
+            <span>Kết quả đánh giá:</span> &nbsp;&nbsp;
+            <p-tag
+              *ngIf="
+                schoolinitiationplan.status.statusId >= 6 &&
+                schoolinitiationplan.status.statusId <= 9
+              "
+              class="status"
+              [severity]="
+                getStatusSeverity(schoolinitiationplan.status.statusId)
+              "
+              [rounded]="true"
+            >
+              {{ schoolinitiationplan.status.statusName }}
+            </p-tag>
           </div>
         </div>
       </ng-container>
