--- a/src/app/features/post-login/assignment/create-assignment/create-assignment.component.scss
+++ b/src/app/features/post-login/assignment/create-assignment/create-assignment.component.scss
@@ -15,3 +15,32 @@
     border-radius: 8px;
     width: 100%;
 }
+.action-item {
+    width: 50px;
+    height: 50px;
+    background-color: $primary;
+    border-color: $primary;
+    border-radius: 50%;
+    font-size: 20px;
+    &:hover {
+        background-color: $primary-hover;
+        border-color: $primary-hover;
+    }
+    i {
+        color: #fff;
+        align-items: center;
+    }
+}
+:host ::ng-deep {
+    .p-button {
+        background-color: $primary;
+        border-radius: 8px;
+        border: solid 1px $primary;
+        transition: all 0.5s ease;
+        margin-right: 20px;
+        &:hover {
+            background-color: $primary-hover;
+            border-color: $primary-hover;
+        }
+    }
+}
