--- a/src/app/features/post-login/school-side/assignment/submit-assignment/submit-assignment.component.scss
+++ b/src/app/features/post-login/school-side/assignment/submit-assignment/submit-assignment.component.scss
@@ -1,5 +1,7 @@
 @import "../../../../../../assets/scss/base";
-
+.submit-assignment {
+    font-size: 16px;
+}
 select {
     width: 100%;
     font-size: 1rem;
@@ -43,10 +45,35 @@ ul {
     padding: 0;
 }
 :host ::ng-deep {
+    // .p-component {
+    //     font-size: 16px;
+    // }
     .p-dropdown {
         width: 100%;
     }
     ul {
         padding: 0;
     }
+}
+.comment {
+    width: 80%;
+}
+.comment-content {
+    border-top: 0.5px solid gray;
+}
+.comment-item {
+    background-color: #ffffff;
+    height: 60px;
+    .comment-item-person {
+        img {
+            width: 40px;
+            height: 40px;
+        }
+    }
+    .comment-item-content {
+        padding-left: 20px;
+    }
+}
+.font-size-12 {
+    font-size: 12px;
 }
