--- a/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
+++ b/src/app/features/post-login/school-initiation-plan/school-initiation-plan-detail/school-initiation-plan-detail.component.scss
@@ -84,10 +84,11 @@ p {
 .button-bottom {
     button {
         font-size: 16px;
+        padding: 15px 20px;
+        border-radius: 30px;
+        border: none;
         width: 200px;
         transition: all 0.5s ease;
-        margin: 0;
-
         &.p-tag-danger {
             &:hover {
                 background-color: #ffd4cf;
@@ -143,4 +144,15 @@ input {
 }
 .font-size-20 {
     font-size: 20px;
+}
+.his-file-name {
+    cursor: pointer;
+    color: blue;
+    &:hover {
+        text-decoration: underline;
+    }
+}
+.calendar {
+    height: 400px;
+    width: 400px;
 }
